fixes overflow issues

--- a/src/components/general/Layout/Layout.css
+++ b/src/components/general/Layout/Layout.css
@@ -20,7 +20,8 @@ body {
 }
 
 main {
-  width: 100vw;
+  width: 100%;
+  max-width: 100vw;
   height: 100%;
   display: flex;
   flex-direction: column;
